# insurance-gas

./: README.md  pyproject.toml
notebooks/: insurance_gas_demo.py  run_tests.py
src/insurance_gas/: __init__.py  bootstrap.py  datasets.py  diagnostics.py  filter.py  forecast.py  model.py  panel.py  plotting.py
src/insurance_gas/distributions/: __init__.py  base.py  beta.py  gamma.py  lognormal.py  negative_binomial.py  poisson.py  zip.py
tests/: test_bootstrap.py  test_datasets.py  test_diagnostics.py  test_distributions.py  test_filter.py  test_forecast.py  test_model.py  test_panel.py
